# protokolius-ai

./: .env.example  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  Dockerfile.worker  alembic.ini  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: companies.py  integrations.py  logs.py  meetings.py  router.py  status.py  test.py  webhook.py
backend/app/bot/: app.py  handlers.py  manager.py
backend/app/models/: __init__.py  company.py  ingestion_log.py  integration.py  meeting.py  meeting_chunk.py
backend/app/schemas/: __init__.py  common.py  company.py  integration.py  meeting.py
backend/app/services/: chunker.py  crypto.py  drive.py  embeddings.py  llm.py  rag.py  readai_parser.py  vector_store.py
backend/app/tests/: test_chunker.py  test_parser.py
backend/app/tests/fixtures/: readai_sample.json
backend/app/worker/: celery_app.py
backend/app/worker/tasks/: ingestion.py
backend/migrations/: env.py  init.sql
frontend/: Dockerfile.prod  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/setup/: layout.tsx  page.tsx
frontend/src/components/common/: CopyButton.tsx  EmptyState.tsx  SecretInput.tsx  StatusDot.tsx
frontend/src/components/integrations/: IntegrationCard.tsx
frontend/src/components/layout/: AppShell.tsx  (+1 more)
frontend/src/lib/: api.ts  motion.ts  utils.ts
frontend/src/styles/: globals.css
(+23 files in other folders)
